src/server/server.css
/* Contains some generic server rules. Mostly about cursor styling. */

.xserver.js {
    cursor: url(arrow.png) 10 5, auto;
    outline: none;
    position: relative;
}

.xserver.js[data-cursor="pointer"] {
    cursor: url(pointer.png) 14 8, auto;
}

.xserver.js[data-cursor="grabbing"] {
    cursor: url(grabbing.png) 20 17, auto;
}

.xserver.js[data-cursor="x-cursor"] {
    cursor: url(x-cursor.png) 15 15, auto;
}

